--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -1,9 +1,23 @@
-FROM golang:1.5.3
-RUN go get github.com/imikushin/trash
+FROM alpine:3.4
+# FROM arm=armhf/alpine:3.4
+
+ARG DAPPER_HOST_ARCH
+ENV HOST_ARCH=${DAPPER_HOST_ARCH} ARCH=${DAPPER_HOST_ARCH}
+
+RUN apk -U add bash gcc musl-dev go go-tools git perl linux-headers openssl util-linux
+
+ENV GOPATH=/go PATH=/go/bin:${PATH}
+
+RUN rm -f /bin/sh && ln -s /bin/bash /bin/sh
+RUN apk add curl wget ca-certificates socat
+
+RUN go get github.com/rancher/trash
 ENV DAPPER_SOURCE /go/src/github.com/rancher/rancher-net/
-ENV DAPPER_OUTPUT bin dist
-ENV GO15VENDOREXPERIMENT 1
+ENV DAPPER_OUTPUT ./bin ./dist
 ENV HOME ${DAPPER_SOURCE}
 WORKDIR ${DAPPER_SOURCE}
+
+RUN mkdir -p ./scripts && ln -sf ./download_${ARCH} ./scripts/download
+
 ENTRYPOINT ["./scripts/entry"]
 CMD ["ci"]
