--- a/scripts/build
+++ b/scripts/build
@@ -6,4 +6,4 @@ source $(dirname $0)/version
 cd $(dirname $0)/..
 mkdir -p bin
 echo Building version $VERSION
-go build -ldflags "-X main.VERSION=$VERSION" -o bin/rancher-net main.go
+go build -ldflags "-X main.VERSION=$VERSION -linkmode external -extldflags -static -s" -o bin/rancher-net main.go
